deploy/k8s/helm/starter-kit.yaml
---
# Source: starter-kit/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starter-kit
---
# Source: starter-kit/charts/gateway-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starter-kit
  name: micro-gateway-api
  labels:
    name: micro-gateway-api
    helm.sh/chart: gateway-api-0.1.0
    app.kubernetes.io/name: gateway-api
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  # the port that this service should serve on
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30000 # NodePort模式端口
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app.kubernetes.io/name: gateway-api
    app.kubernetes.io/instance: micro
---
# Source: starter-kit/charts/gateway-web/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starter-kit
  name: micro-gateway-web
  labels:
    name: micro-gateway-web
    helm.sh/chart: gateway-web-0.1.0
    app.kubernetes.io/name: gateway-web
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  # the port that this service should serve on
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30002 # NodePort模式端口
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app.kubernetes.io/name: gateway-web
    app.kubernetes.io/instance: micro
---
# Source: starter-kit/charts/account-srv/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: starter-kit
  name: micro-account-srv
  labels:
    helm.sh/chart: account-srv-0.1.0
    app.kubernetes.io/name: account-srv
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: account-srv
      app.kubernetes.io/instance: micro
  template:
    metadata:
      labels:
        app.kubernetes.io/name: account-srv
        app.kubernetes.io/instance: micro
    spec:
      serviceAccountName: micro-services
      containers:
      - name: api
        image: "hbchen/starter-kit-account-srv:1.0"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "25m"
        command: [
          "/account-srv",
          "--registry=kubernetes",
          "--server=rpc",
          "--broker=http",
          "--transport=tcp",
          "--register_ttl=60",
          "--register_interval=30",
          "--selector=cache",
          "--enable_stats",
          "api",
          "--address=:80",
        ]
        ports:
        - containerPort: 80
          name: service-port
---
# Source: starter-kit/charts/console-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: starter-kit
  name: micro-console-api
  labels:
    helm.sh/chart: console-api-0.1.0
    app.kubernetes.io/name: console-api
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: console-api
      app.kubernetes.io/instance: micro
  template:
    metadata:
      labels:
        app.kubernetes.io/name: console-api
        app.kubernetes.io/instance: micro
    spec:
      serviceAccountName: micro-services
      containers:
      - name: api
        image: "hbchen/starter-kit-console-api:1.0"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "25m"
        command: [
          "/console-api",
          "--registry=kubernetes",
          "--server=rpc",
          "--broker=http",
          "--transport=tcp",
          "--register_ttl=60",
          "--register_interval=30",
          "--selector=cache",
          "--enable_stats",
          "api",
          "--address=:80",
        ]
        ports:
        - containerPort: 80
          name: service-port
---
# Source: starter-kit/charts/console-web/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: starter-kit
  name: micro-console-web
  labels:
    helm.sh/chart: console-web-0.1.0
    app.kubernetes.io/name: console-web
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: console-web
      app.kubernetes.io/instance: micro
  template:
    metadata:
      labels:
        app.kubernetes.io/name: console-web
        app.kubernetes.io/instance: micro
    spec:
      serviceAccountName: micro-services
      containers:
      - name: api
        image: "hbchen/starter-kit-console-web:1.0"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "25m"
        command: [
          "/console-web",
          "--registry=kubernetes",
          "--server=rpc",
          "--broker=http",
          "--transport=tcp",
          "--register_ttl=60",
          "--register_interval=30",
          "--selector=cache",
          "--enable_stats",
          "api",
          "--address=:80",
        ]
        ports:
        - containerPort: 80
          name: service-port
---
# Source: starter-kit/charts/gateway-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: starter-kit
  name: micro-gateway-api
  labels:
    helm.sh/chart: gateway-api-0.1.0
    app.kubernetes.io/name: gateway-api
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway-api
      app.kubernetes.io/instance: micro
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway-api
        app.kubernetes.io/instance: micro
    spec:
      serviceAccountName: micro-services
      containers:
      - name: gateway
        image: "hbchen/starter-kit-gateway:1.0"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "25m"
        command: [
          /micro,
          "--registry=kubernetes",
          "--server=rpc",
          "--transport=tcp",
          "--register_ttl=60",
          "--register_interval=30",
          "--enable_stats",
          api,
          "--address=:80",
        ]
        ports:
        - containerPort: 80
          name: gateway-port
---
# Source: starter-kit/charts/gateway-web/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: starter-kit
  name: micro-gateway-web
  labels:
    helm.sh/chart: gateway-web-0.1.0
    app.kubernetes.io/name: gateway-web
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway-web
      app.kubernetes.io/instance: micro
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway-web
        app.kubernetes.io/instance: micro
    spec:
      serviceAccountName: micro-services
      containers:
      - name: gateway
        image: "hbchen/starter-kit-gateway:1.0"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "25m"
        command: [
          /micro,
          "--registry=kubernetes",
          "--server=rpc",
          "--transport=tcp",
          "--register_ttl=60",
          "--register_interval=30",
          "--enable_stats",
          web,
          "--address=:80",
        ]
        ports:
        - containerPort: 80
          name: gateway-port
---
# Source: starter-kit/charts/gateway-api/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: starter-kit
  name: ingress-micro-gateway-api
  labels:
    helm.sh/chart: gateway-api-0.1.0
    app.kubernetes.io/name: gateway-api
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
  - host: api.starter-kit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: micro-gateway-api
          servicePort: 80
---
# Source: starter-kit/charts/gateway-web/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: starter-kit
  name: ingress-micro-gateway-web
  labels:
    helm.sh/chart: gateway-web-0.1.0
    app.kubernetes.io/name: gateway-web
    app.kubernetes.io/instance: micro
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
  - host: web.starter-kit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: micro-gateway-web
          servicePort: 80
---
# Source: starter-kit/charts/gateway-api/templates/rbac.yaml
# TODO gateway独立部署时RBAC授权
---
# Source: starter-kit/charts/gateway-web/templates/rbac.yaml
# TODO gateway独立部署时RBAC授权
